# lean-ctx

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_CHECKLIST.md  DISCORD_POST.md  Makefile  README.md  install.sh
rust/: .gitlab-ci.yml  Cargo.toml  README.md
rust/examples/: CLAUDE.md
rust/src/: cli.rs  cloud_sync.rs  config_io.rs  doctor.rs  hook_handlers.rs  hooks.rs  instructions.rs  main.rs  report.rs  rules_inject.rs  server.rs  setup.rs  shell.rs  status.rs  terminal_ui.rs  tool_defs.rs  uninstall.rs
rust/src/cli/: dispatch.rs  mod.rs  shell_init.rs
rust/src/cloud_server/: auth.rs  db.rs  mod.rs
rust/src/core/: agents.rs  benchmark.rs  cache.rs  chunks_ts.rs  cli_cache.rs  compression_safety.rs  compressor.rs  config.rs  deep_queries.rs  deps.rs  embedding_index.rs  entropy.rs  eval.rs  graph_index.rs  heatmap.rs  hybrid_search.rs  knowledge.rs  mod.rs  pipeline.rs  portable_binary.rs  protocol.rs  provider_cache.rs  safety_needles.rs  session.rs  signatures.rs  stats.rs  task_relevance.rs  telemetry.rs  updater.rs  vector_index.rs  watcher.rs
rust/src/dashboard/: dashboard.html  mod.rs
rust/src/hooks/: mod.rs
rust/src/server/: dispatch.rs
rust/src/templates/: CLAUDE.md  CLAUDE_GLOBAL.md  lean-ctx.mdc
rust/src/tool_defs/: granular.rs
rust/src/tools/: ctx_agent.rs  ctx_edit.rs  (+11 more)
rust/tests/: adversarial_compression.rs  hook_e2e_tests.rs  integration_tests.rs  intensive_benchmarks.rs  p4_docker_claude_mcp_selfheal_eval.rs  pre_release_check.sh  savings_verification.rs  security_resolve_path_guard.rs  shell_and_agent_tests.rs
(+44 files in other folders)
