[package]
name = "lean-ctx"
version = "1.1.0"
edition = "2021"
description = "Smart Context MCP Server — reduces LLM token consumption by 89-99%. Single Rust binary, zero runtime dependencies."
license = "MIT"
repository = "https://gitlab.pounce.ch/root/lean-ctx"
keywords = ["mcp", "llm", "tokens", "compression", "ai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "lean-ctx"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io"] }
tiktoken-rs = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"
anyhow = "1"
regex = "1"
walkdir = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
